// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`break-tags.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<a>Lorem</a>, ispum dolor sit <strong>amet</strong>.
<div><a>Lorem</a>, ispum dolor sit <strong>amet</strong>.</div>
<div><div><a>Lorem</a>, ispum dolor sit <strong>amet</strong>.</div></div>

=====================================output=====================================
<a>Lorem</a>, ispum dolor sit <strong>amet</strong>.
<div><a>Lorem</a>, ispum dolor sit <strong>amet</strong>.</div>
<div>
  <div><a>Lorem</a>, ispum dolor sit <strong>amet</strong>.</div>
</div>

================================================================================
`;

exports[`display-inline-block.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
<button>
Click here! Click here! Click here! Click here! Click here! Click here!
</button>
<div>
<button>Click here! Click here! Click here! Click here! Click here! Click here!</button><button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
</div>
<div>
<button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
<button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
</div>
<video src="brave.webm"><track kind=subtitles src=brave.en.vtt srclang=en label="English"><track kind=subtitles src=brave.en.vtt srclang=en label="English"></video>

=====================================output=====================================
<button>
  Click here! Click here! Click here! Click here! Click here! Click here!
</button>
<button>
  Click here! Click here! Click here! Click here! Click here! Click here!
</button>
<div>
  <button>
    Click here! Click here! Click here! Click here! Click here! Click here!</button
  ><button>
    Click here! Click here! Click here! Click here! Click here! Click here!
  </button>
</div>
<div>
  <button>
    Click here! Click here! Click here! Click here! Click here! Click here!
  </button>
  <button>
    Click here! Click here! Click here! Click here! Click here! Click here!
  </button>
</div>
<video src="brave.webm">
  <track kind="subtitles" src="brave.en.vtt" srclang="en" label="English" />
  <track kind="subtitles" src="brave.en.vtt" srclang="en" label="English" />
</video>

================================================================================
`;

exports[`display-none.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><HTML CLASS="no-js mY-ClAsS"><HEAD><META CHARSET="utf-8"><TITLE>My tITlE</TITLE><META NAME="description" content="My CoNtEnT"></HEAD></HTML>

=====================================output=====================================
<!DOCTYPE html>
<html class="no-js mY-ClAsS">
  <head>
    <meta charset="utf-8" />
    <title>My tITlE</title>
    <meta name="description" content="My CoNtEnT" />
  </head>
</html>

================================================================================
`;

exports[`fill.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>
  <img
    src="/images/pansies.jpg"
    alt="about fedco bottom image"
    style="float: left;"
  /><strong>We are a cooperative</strong>, one of the few seed companies so organized
  in the United States. Because we do not have an individual owner or beneficiary,
  profit is not our primary goal. Consumers own 60% of the cooperative and worker
  members 40%. Consumer and worker members share proportionately in the cooperative&#8217;s
  profits through our annual patronage dividends.
</p>

=====================================output=====================================
<p>
  <img
    src="/images/pansies.jpg"
    alt="about fedco bottom image"
    style="float: left"
  /><strong>We are a cooperative</strong>, one of the few seed companies so
  organized in the United States. Because we do not have an individual owner or
  beneficiary, profit is not our primary goal. Consumers own 60% of the
  cooperative and worker members 40%. Consumer and worker members share
  proportionately in the cooperative&#8217;s profits through our annual
  patronage dividends.
</p>

================================================================================
`;

exports[`inline-leading-trailing-spaces.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<span> 321 </span>

<span> <a>321</a> </span>

=====================================output=====================================
<span> 321 </span>

<span> <a>321</a> </span>

================================================================================
`;

exports[`inline-nodes.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus massa vel augue 
vestibulum facilisis in porta turpis. Ut faucibus lectus sit amet urna consectetur dignissim.
Sam vitae neque quis ex dapibus faucibus at sed ligula. Nulla sit amet aliquet nibh.
Vestibulum at congue mi. Suspendisse vitae odio vitae massa hendrerit mattis sed eget dui.
Sed eu scelerisque neque. Donec <b>maximus</b> rhoncus pellentesque. Aenean purus turpis, vehicula 
euismod ante vel, ultricies eleifend dui. Class aptent taciti sociosqu ad litora torquent per 
conubia nostra, per inceptos himenaeos. Donec in ornare velit.</p>

<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus massa vel augue 
vestibulum facilisis in porta turpis. Ut faucibus lectus sit amet urna consectetur dignissim.
Sam vitae neque quis ex dapibus faucibus at sed ligula. Nulla sit amet aliquet nibh.
Vestibulum at congue mi. Suspendisse vitae odio vitae massa hendrerit mattis sed eget dui.
Sed eu scelerisque neque. Donec <a href="#"><b>maximus</b></a> rhoncus pellentesque. Aenean purus turpis, vehicula 
euismod ante vel, ultricies eleifend dui. Class aptent taciti sociosqu ad litora torquent per 
conubia nostra, per inceptos himenaeos. Donec in ornare velit.</p>

=====================================output=====================================
<p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus massa
  vel augue vestibulum facilisis in porta turpis. Ut faucibus lectus sit amet
  urna consectetur dignissim. Sam vitae neque quis ex dapibus faucibus at sed
  ligula. Nulla sit amet aliquet nibh. Vestibulum at congue mi. Suspendisse
  vitae odio vitae massa hendrerit mattis sed eget dui. Sed eu scelerisque
  neque. Donec <b>maximus</b> rhoncus pellentesque. Aenean purus turpis,
  vehicula euismod ante vel, ultricies eleifend dui. Class aptent taciti
  sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec
  in ornare velit.
</p>

<p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus massa
  vel augue vestibulum facilisis in porta turpis. Ut faucibus lectus sit amet
  urna consectetur dignissim. Sam vitae neque quis ex dapibus faucibus at sed
  ligula. Nulla sit amet aliquet nibh. Vestibulum at congue mi. Suspendisse
  vitae odio vitae massa hendrerit mattis sed eget dui. Sed eu scelerisque
  neque. Donec <a href="#"><b>maximus</b></a> rhoncus pellentesque. Aenean purus
  turpis, vehicula euismod ante vel, ultricies eleifend dui. Class aptent taciti
  sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec
  in ornare velit.
</p>

================================================================================
`;

exports[`nested-inline-without-whitespace.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<a href="/wiki/Help:IPA/English" title="Help:IPA/English">/<span style="border-bottom:1px dotted"><span title="/ˌ/: secondary stress follows">ˌ</span
><span title="/ɪ/: &#39;i&#39; in &#39;kit&#39;">ɪ</span
><span title="&#39;l&#39; in &#39;lie&#39;">l</span
><span title="/ə/: &#39;a&#39; in &#39;about&#39;">ə</span
><span title="/ˈ/: primary stress follows">ˈ</span
><span title="&#39;n&#39; in &#39;nigh&#39;">n</span
><span title="/ɔɪ/: &#39;oi&#39; in &#39;choice&#39;">ɔɪ</span></span>/</a>

<span class="word"><span class="syllable"><span class="letter vowel">i</span><span class="letter consonant">p</span></span
><span class="syllable"><span class="letter consonant onset">s</span><span class="letter vowel">u</span><span class="letter consonant">m</span></span></span>

=====================================output=====================================
<a href="/wiki/Help:IPA/English" title="Help:IPA/English"
  >/<span style="border-bottom: 1px dotted"
    ><span title="/ˌ/: secondary stress follows">ˌ</span
    ><span title="/ɪ/: &#39;i&#39; in &#39;kit&#39;">ɪ</span
    ><span title="&#39;l&#39; in &#39;lie&#39;">l</span
    ><span title="/ə/: &#39;a&#39; in &#39;about&#39;">ə</span
    ><span title="/ˈ/: primary stress follows">ˈ</span
    ><span title="&#39;n&#39; in &#39;nigh&#39;">n</span
    ><span title="/ɔɪ/: &#39;oi&#39; in &#39;choice&#39;">ɔɪ</span></span
  >/</a
>

<span class="word"
  ><span class="syllable"
    ><span class="letter vowel">i</span
    ><span class="letter consonant">p</span></span
  ><span class="syllable"
    ><span class="letter consonant onset">s</span
    ><span class="letter vowel">u</span
    ><span class="letter consonant">m</span></span
  ></span
>

================================================================================
`;

exports[`non-breaking-whitespace.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- normal whitespaces -->
<span>Nihil aut odit omnis. Quam maxime est molestiae. Maxime dolorem dolores voluptas quaerat ut qui sunt vitae error.</span>
<!-- non-breaking whitespaces -->
<span>Nihil aut odit omnis. Quam maxime est molestiae. Maxime dolorem dolores voluptas quaerat ut qui sunt vitae error.</span>
<!-- non-breaking narrow whitespaces -->
<span>Prix : 32 €</span>

=====================================output=====================================
<!-- normal whitespaces -->
<span
  >Nihil aut odit omnis. Quam maxime est molestiae. Maxime dolorem dolores
  voluptas quaerat ut qui sunt vitae error.</span
>
<!-- non-breaking whitespaces -->
<span
  >Nihil aut odit omnis. Quam maxime est molestiae. Maxime dolorem dolores voluptas quaerat ut qui sunt vitae error.</span
>
<!-- non-breaking narrow whitespaces -->
<span>Prix : 32 €</span>

================================================================================
`;

exports[`snippet: #18 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div> </div>

================================================================================
`;

exports[`snippet: #19 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>          </div>
=====================================output=====================================
<div> </div>

================================================================================
`;

exports[`snippet: #20 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>           </div>
=====================================output=====================================
<div>  </div>

================================================================================
`;

exports[`snippet: #21 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>                   </div>
=====================================output=====================================
<div>   </div>

================================================================================
`;

exports[`snippet: #22 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<span> </span>
=====================================output=====================================
<span> </span>

================================================================================
`;

exports[`snippet: #23 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<span>          </span>
=====================================output=====================================
<span>   </span>

================================================================================
`;

exports[`snippet: #24 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<span>           </span>
=====================================output=====================================
<span>    </span>

================================================================================
`;

exports[`snippet: #25 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<span>                   </span>
=====================================output=====================================
<span>     </span>

================================================================================
`;

exports[`snippet: #26 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img/> <img/>
=====================================output=====================================
<img /> <img />

================================================================================
`;

exports[`snippet: #27 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img/>          <img/>
=====================================output=====================================
<img />   <img />

================================================================================
`;

exports[`snippet: #28 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img/>           <img/>
=====================================output=====================================
<img />    <img />

================================================================================
`;

exports[`snippet: #29 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img/>                   <img/>
=====================================output=====================================
<img />     <img />

================================================================================
`;

exports[`snippet: #30 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<i />   |   <i />
=====================================output=====================================
<i />   |   <i />

================================================================================
`;

exports[`snippet: #31 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p><span>X</span>   or   <span>Y</span></p><p>X   or   Y</p>
=====================================output=====================================
<p><span>X</span>   or   <span>Y</span></p>
<p>X   or   Y</p>

================================================================================
`;

exports[`snippet: \`U+2005\` should format like \`U+005F\` not like \`U+0020\` format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- U+2005 -->
<div>before<span> </span>afterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafter</div>
<!-- U+005F -->
<div>before<span>_</span>afterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafter</div>
<!-- U+0020 -->
<div>before<span> </span>afterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafter</div>
=====================================output=====================================
<!-- U+2005 -->
<div>
  before<span> </span>afterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafter
</div>
<!-- U+005F -->
<div>
  before<span>_</span>afterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafter
</div>
<!-- U+0020 -->
<div>
  before<span
  > </span
  >afterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafterafter
</div>

================================================================================
`;

exports[`snippet: \`U+2005\` should indent like \`U+005F\` not like \`U+0020\` format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- U+2005 -->
<script type="text/unknown" lang="unknown">
        // comment
          // comment
          // comment
          // comment
</script>
<!-- U+005F -->
<script type="text/unknown" lang="unknown">
   _    // comment
          // comment
          // comment
          // comment
</script>
<!-- U+0020 -->
<script type="text/unknown" lang="unknown">
        // comment
          // comment
          // comment
          // comment
</script>
=====================================output=====================================
<!-- U+2005 -->
<script type="text/unknown" lang="unknown">
       // comment
         // comment
         // comment
         // comment
</script>
<!-- U+005F -->
<script type="text/unknown" lang="unknown">
  _    // comment
         // comment
         // comment
         // comment
</script>
<!-- U+0020 -->
<script type="text/unknown" lang="unknown">
  // comment
    // comment
    // comment
    // comment
</script>

================================================================================
`;

exports[`surrounding-linebreak.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<span>123</span>
<span>
123</span>
<span>123
</span>
<span>
123
</span>

<div>123</div>
<div>
123</div>
<div>123
</div>
<div>
123
</div>

=====================================output=====================================
<span>123</span>
<span> 123</span>
<span>123 </span>
<span> 123 </span>

<div>123</div>
<div>123</div>
<div>123</div>
<div>123</div>

================================================================================
`;

exports[`table.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<table>
  <thead>
    <tr>
      <th>A</th>
      <th>B</th>
      <th>C</th>
    </tr>
  </thead>
</table>

<table><thead><tr><th>A</th><th>B</th><th>C</th></tr></thead></table>

<table> <thead> <tr> <th> A </th> <th> B </th> <th> C </th> </tr> </thead> </table>

<table>
  <thead>
    <tr>
    </tr>
  </thead>
</table>

=====================================output=====================================
<table>
  <thead>
    <tr>
      <th>A</th>
      <th>B</th>
      <th>C</th>
    </tr>
  </thead>
</table>

<table>
  <thead>
    <tr>
      <th>A</th>
      <th>B</th>
      <th>C</th>
    </tr>
  </thead>
</table>

<table>
  <thead>
    <tr>
      <th>A</th>
      <th>B</th>
      <th>C</th>
    </tr>
  </thead>
</table>

<table>
  <thead>
    <tr></tr>
  </thead>
</table>

================================================================================
`;

exports[`template.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
  <template>foo</template>
</template>

<template>
  <template>foooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</template>
</template>

=====================================output=====================================
<template>
  <template>foo</template>
</template>

<template>
  <template
    >foooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</template
  >
</template>

================================================================================
`;
